--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "express.js public cmtr.io",
   "main": "app.js",
   "scripts": {
-    "test": "test"
+    "test": "node ./node_modules/mocha/bin/mocha --recursive"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,24 @@
   "bugs": {
     "url": "https://github.com/cmtr/public/issues"
   },
-  "homepage": "https://github.com/cmtr/public#readme"
+  "homepage": "https://github.com/cmtr/public#readme",
+  "dependencies": {
+    "axios": "^0.21.0",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "ejs": "~2.6.1",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "chai": "^4.3.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-exclude": "^2.0.2",
+    "eslint": "^7.20.0",
+    "faker": "^5.4.0",
+    "mocha": "^8.3.0",
+    "sinon": "^9.2.4"
+  }
 }
