--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "lodash": "^4.17.21",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "showdown": "^1.9.1"
   },
   "devDependencies": {
     "chai": "^4.3.0",
