add marked dependency

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "lodash": "^4.17.21",
+    "marked": "^4.0.12",
     "morgan": "~1.9.1",
     "showdown": "^2.0.0"
   },
