--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "node ./node_modules/mocha/bin/mocha --recursive",
     "start": "node app.js",
-    "start-prod": "STAGE=PROD node app.js >> log-prod.txt"
+    "start-prod": "STAGE=PROD node app.js >> log-prod.txt",
+    "build": "sudo docker build -tag cmtr-public .",
+    "start-docker": "sudo docker run -d -p 8080:3000 cmtr-public"
   },
   "repository": {
     "type": "git",
